--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ repository               : "ShiYuXiao-Github/ShiYuXiao-Github.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "ShiyuXiao.JPG"
+  name             : "肖诗宇"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Nanjing, Jiangsu"
+  employer         : "Southeast University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "418811238@qq.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
